# hotels-template-library

./: README.md  WORKSPACE
append-only-lookup/experimental/: BUILD  atomic_map.h  atomic_set.h  synchronized_map.h  synchronized_set.h  threaded_set_benchmark.cc  threaded_set_test.cc
haversack/: BUILD.bazel  haversack.h  haversack_test.cc  haversack_test.nc.h  haversack_test_external_helper.h  haversack_test_util.h  haversack_utils.h  haversack_utils_test.cc  unsafe_haversack_test.cc
haversack/internal/: BUILD.bazel  basic_tuple.h  basic_tuple_test.cc  haversack_impl.h  type.h  type_set.h  type_set_test.cc  type_test.cc  util.h
meta/: basic_tuple.h  basic_tuple_test.cc  function_traits.h  type.h  type_set.h  type_set_test.cc  type_test.cc
range/: range.h  range_combinators.h  range_core.h  range_test.cc
synchronized-value/: BUILD  absl_mutex_strategy.h  left_right_strategy.h  mutex_strategy.h  rw_mutex_strategy.h  shared_ptr_rcu_strategy.h  synchronized_value.h  synchronized_value_test.cc
synchronized-value/experimental/: BUILD  synchronized_value_test.cc
synchronized_value/: BUILD  absl_mutex_strategy.h  left_right_strategy.h  shared_ptr_rcu_strategy.h  small_atomic_strategy.h  synchronized_value.h  synchronized_value_test.cc
synchronized_value/experimental/: BUILD  synchronized_value.h  synchronized_value_test.cc
